--- a/styles/components.scss
+++ b/styles/components.scss
@@ -11,7 +11,7 @@
  
 }
 .photo{
-  border-radius: 5px 5px 0 0;
+  border-radius: 15px 15px 0 0;
 }
 // form style
 .form-inputs * {
@@ -127,7 +127,7 @@ position:relative;
   padding: 4px 6px 3px 4px;
     font-size: 11px;
     font-weight: 300;
-    color: #000;
+    color: #377DFF;
      top: 53px;
   left: 15px;
   position: absolute;
@@ -135,7 +135,7 @@ position:relative;
 }
 .typeoffering{
   background: #fff;
-  border-radius: 5px;
+  border-radius: 10px;
   color: #377DFF;
   top: 10px;
   right: 15px;
@@ -162,9 +162,7 @@ position:relative;
 }
 .listDetails{
   border: 1px solid rgb(225, 231, 231);
-  border-radius: 0 0 5px 5px;
-  padding:1rem 0 0rem 1rem;
- text-transform: capitalize;
+  border-radius: 0 0 15px 15px;
  line-height: 1.5;
 }
 
@@ -172,7 +170,7 @@ position:relative;
   font-size:13px;
 }
 .btnInvest{
-  border-radius: 5px 50px 10px 5px;
+  border-radius: 10px;
   font-size:11.5px;
 }
 .btntabs:hover{
