--- a/styles/components.scss
+++ b/styles/components.scss
@@ -1,4 +1,5 @@
 // section style
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap');
 .section {
   @apply pt-[50px] pb-[50px];
 }
@@ -122,43 +123,44 @@ position:relative;
 }
 
  .timer{
-  background: #FAFAFA;
-  border-radius: 10px;
+  background: #3b82f6;
+  border-radius: 5px;
   padding: 4px 6px 3px 4px;
     font-size: 11px;
-    font-weight: 300;
-    color: #377DFF;
-     top: 53px;
-  left: 15px;
+    color: #fff;
+    top: 15px;
+    right: 10px;
   position: absolute;
-  font-weight: 600;
+  font-weight: 500;
+  text-transform: uppercase;
 }
-.typeoffering{
-  background: #fff;
-  border-radius: 10px;
-  color: #377DFF;
-  top: 10px;
-  right: 15px;
+.typeoffering {
+   border-radius: 5px;
+  color: #1E2022;
+  bottom: 10px;
+    right: 10px;
   padding: 7px;
   font-size: 11px;
-  font-weight: 600;
+  font-weight: 400;
   display: flex;
   position: absolute;
-  font-weight: 300;
+  text-transform: uppercase;
+  background-size: cover;
+  background-position: center;
+  background-color: #FAFAFA;;
 }
 .type
 {
-  background: #fff;
-  border-radius: 7px;
-  color: #377DFF;
-  top: 10px;
-  left: 15px;
-  font-size: 11px;
-  padding: 7px;
-  font-weight: bold;
+  background: #3b82f6;
+  border-radius: 5px;
+  font-weight: 500;
+  color: #f6fafe;
+  top: 15px;
+  left: 10px;
+  font-size: 12px;
+  padding: 4px 6px 3px 4px;
   position: absolute;
-  font-weight: 300;
- 
+  text-transform: uppercase;
 }
 .listDetails{
   border: 1px solid rgb(225, 231, 231);
@@ -170,8 +172,16 @@ position:relative;
   font-size:13px;
 }
 .btnInvest{
-  border-radius: 10px;
-  font-size:11.5px;
+  display: flex;
+  justify-content: center;
+    padding: 4px;
+   font-size: 12px;
+   border-radius: 7px;
+  align-content: center;
+  align-items: center;
+}
+.btnInvest:hover{
+background-color:#f1f5f9;
 }
 .btntabs:hover{
  background-color:rgba(0, 0, 0, 0.12);
@@ -211,12 +221,16 @@ position:relative;
           margin-top:10px;
           border-top: 1px solid rgb(225, 231, 231);
     }
+    .btnInvest{
+      margin: 0.2rem;
+    }  
  .mbspacing{
   padding:0px!important;
  }
  .mb-pt-2{
   padding-top:2rem;
  }
+ 
  .fontbase{
   font-size:16px;
  }
@@ -239,6 +253,7 @@ footer,.footImg{
  &:hover {
   background-color: #e9e9e9;
 }
+
 
 }
 
@@ -283,4 +298,18 @@ footer,.footImg{
 
 .dropdown-menu a:hover {
   background-color: #f1f1f1;
+}
+.scroll-menu-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  width: 100%;
+}
+
+.scrollwrapper {
+  display: flex !important;
+  justify-content: center;
+  align-items: center;
+  overflow-x: auto !important;
 }
