--- a/styles/navigation.scss
+++ b/styles/navigation.scss
@@ -36,14 +36,15 @@
 .nav-item {
   @apply lg:mx-3 md:bg-theme-light sm:bg-stone-200;
 
+
   select:focus {
     box-shadow: none;
     
   }
 }
 .nav-link {
-  @apply py-3 px-2  md:py-3 px-2 font-primary text-base font-bold  text-primary transition  hover:text-black md:py-4 lg:px-3 ;
-
+  @apply py-3 px-2  font-primary text-lg font-bold  text-primary transition  hover:text-black md:py-4 lg:px-3 ;
+ 
   &-active {
     @apply text-primary;
   }
