--- a/styles/components.scss
+++ b/styles/components.scss
@@ -1,5 +1,5 @@
 // section style
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap');
+
 .section {
   @apply pt-[50px] pb-[50px];
 }
@@ -86,7 +86,7 @@
 
 //card
 .card {
-  @apply mt-10 rounded-[4px] border border-[rgba(0,0,0,.125)] bg-white px-5 px-5 py-12 py-12 shadow md:mt-0;
+  @apply mt-10 rounded-[4px] border border-[rgba(0,0,0,.125)] bg-white px-5  py-12  shadow md:mt-0;
 }
 
 .col-recommended {
@@ -158,7 +158,7 @@ position:relative;
   top: 15px;
   left: 10px;
   font-size: 12px;
-  padding: 4px 6px 3px 4px;
+  padding: 4px 6px 3px 6px;
   position: absolute;
   text-transform: uppercase;
 }
@@ -299,17 +299,7 @@ footer,.footImg{
 .dropdown-menu a:hover {
   background-color: #f1f1f1;
 }
-.scroll-menu-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  overflow: hidden;
-  width: 100%;
-}
 
-.scrollwrapper {
-  display: flex !important;
-  justify-content: center;
-  align-items: center;
-  overflow-x: auto !important;
+::-webkit-scrollbar {
+  display: none;
 }
