--- a/styles/components.scss
+++ b/styles/components.scss
@@ -231,8 +231,8 @@ background-color:#f1f5f9;
   padding-top:2rem;
  }
  
- .fontbase{
-  font-size:16px;
+.fontbasebanner{
+  font-size:14px!important;
  }
 .btntabs
 {  margin-bottom:1rem;
