--- a/styles/components.scss
+++ b/styles/components.scss
@@ -238,7 +238,9 @@ background-color:#f1f5f9;
  .mb-pt-2{
   padding-top:2rem;
  }
-
+ .mb-pt-1{
+  padding-top:.1rem;
+ }
  
 .fontbasebanner{
   font-size:14px!important;
@@ -334,7 +336,7 @@ footer,.footImg{
   padding:25px;
  }
 
-ul.inline{
+ul.tabsitems{
   list-style:none;
   padding: 0;
   margin-bottom:0;
