--- a/styles/components.scss
+++ b/styles/components.scss
@@ -381,10 +381,6 @@ ul.tabsitems{
 }
 
 /* Add when click */
-.active,
-.accordion:hover {
-  background-color: #ccc;
-}
 
 .panel {
   padding: 0 18px;
@@ -392,4 +388,73 @@ ul.tabsitems{
   display: none;
   overflow: hidden;
 }
+.accordion {
+  margin: 0 auto;
+  width: 80%;
+  
+  .title {
+    padding: 10px 10px;
+    cursor: pointer;
+    transform: translate3d(0, 0, 0);
+    color: #000;
+    position: relative;
+    font-size: 14px;
+     margin-bottom: -1px;
+    border: solid 1px  rgb(209, 211, 214);
+    text-align: left;
+    border-radius: 20px;
 
+    &::after {
+      content: "+";
+      color: gray;
+      transition: transform .5s ease-in-out;
+      position: absolute;
+      right: 30px;
+          }
+
+    &.is-expanded {
+      transition: background .5s;
+      
+      
+      &::after {
+        content: "-";
+        transform: rotate(-360deg);
+      }
+    }
+  }
+
+  .content {
+    overflow: hidden;
+    max-height: 0;
+    transition: max-height .5s;
+    margin: 0;
+    padding: 0 20px;
+    border: solid 1px #fff;
+    border-top: 0;
+    background: #eff1f5;
+    border-radius: 10px;
+    border-top: #f6fafe;
+    box-shadow: #eee;
+    p {
+      padding: 30px 0;
+      margin: 0;
+      opacity: 0;
+      transition: .5s;
+    }
+    
+    &.is-expanded {
+      max-height: 600px;
+      overflow: hidden;
+      p {
+        opacity: 1;
+      }
+    }
+  }
+  
+  &:after {
+    width: 100%;
+    height: 10px;
+    display: block;
+       content: '';
+  }
+}
